manifests/snapshot/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheussnapshot
spec:
  selector:
    matchLabels:
      app: prometheussnapshot
  template:
    metadata:
      labels:
        app: prometheussnapshot
    spec:
      containers:
      - name: prometheussnapshot
        image: ghcr.io/opscalehub/prometheussnapshot:main
        pullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "64Mi"
            cpu: "10m"
          limits:
            memory: "128Mi"
            cpu: "200m"
