manifests/snapshot/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheussnapshot
spec:
  ports:
    - port: 8080
      targetPort: 8080
      name: http
  selector:
    app: prometheussnapshot
