manifests/snapshot/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheussnapshot
spec:
  ingressClassName: nginx
  rules:
  - host: prometheussnapshot.local.opscale.ir
    http:
      paths:
      - backend:
          service:
            name: prometheussnapshot
            port:
              number: 8080
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - prometheussnapshot.local.opscale.ir
    secretName: wildcard-tls-secret
